<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:background="@android:color/darker_gray"
    tools:listitem="@layout/list_item">

    <LinearLayout
        android:id="@+id/list_item_image_only_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/list_item_image_only_view_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/area_scenery_image"
            android:scaleType="fitXY" />
    </LinearLayout>

    <ImageView
        android:id="@+id/list_item_image_view"
        android:layout_width="@dimen/list_item_image_height"
        android:layout_height="@dimen/list_item_image_height"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/image_for_list"
        android:scaleType="fitCenter"
        tools:background="@color/colorAccent"
        tools:layout_height="@dimen/list_item_image_height"
        tools:layout_width="@dimen/list_item_image_height" />

    <LinearLayout
        android:id="@+id/list_item_text_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="8dp"
        tools:background="@android:color/darker_gray">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/star_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_star_empty_24dp"
                android:contentDescription="@string/star_1"
                android:tint="@color/star_review" />

            <ImageView
                android:id="@+id/star_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_star_empty_24dp"
                android:contentDescription="@string/star_2"
                android:tint="@color/star_review" />

            <ImageView
                android:id="@+id/star_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_star_empty_24dp"
                android:contentDescription="@string/star_3"
                android:tint="@color/star_review" />

            <ImageView
                android:id="@+id/star_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_star_empty_24dp"
                android:contentDescription="@string/star_4"
                android:tint="@color/star_review" />

            <ImageView
                android:id="@+id/star_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_star_empty_24dp"
                android:contentDescription="@string/star_5"
                android:tint="@color/star_review" />

            <TextView
                android:id="@+id/review_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:gravity="bottom"
                android:text=""
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:gravity="bottom"
                android:text="@string/reviews"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/list_item_title_text_view"
            style="@style/list_item_title_textStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            tools:ignore="NestedWeights"
            tools:text="Title"
            tools:textColor="@android:color/black" />

        <TextView
            android:id="@+id/list_item_details_text_view"
            style="@style/list_item_textStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            tools:text="Details"
            tools:textColor="@android:color/black" />
    </LinearLayout>

    <ImageView
        android:id="@+id/list_item_map_pin_container"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/map_pin_image"
        android:src="@drawable/ic_map_pin_24dp" />
</LinearLayout>